objects/EmailSubscription__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDateTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedDateTime__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Issue_Resolution_Survey__c</fullName>
        <description>Date that the Issue Resolution Survey was last sent.</description>
        <label>Sent Date - Issue Resolution Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unsubscribe__c</fullName>
        <label>Unsubscribe</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue Resolution Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account ID</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Subscriptions</relationshipLabel>
        <relationshipName>Email_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>Email Subscription</label>
    <nameField>
        <displayFormat>ES-{0000000}</displayFormat>
        <label>Email Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>Email__c</columns>
        <columns>Unsubscribe__c</columns>
        <columns>Sent_Date_Issue_Resolution_Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>